feat: finally works